# GenomeScript

./: .gitignore  .gitmodules  CMakeLists.txt  GenomeScriptInstall.bat  GenomeScriptUninstall.bat  README.md
detours/: CMakeLists.txt
examples/DisableCombatMusic/: main.lua
examples/Test1/: main.lua
examples/TwoFiles/: main.lua  second_file.lua
src/: common.hpp  hooks.cpp  hooks.hpp  log.cpp  log.hpp  main.cpp  pch.hpp  system.cpp  system.hpp
